--- a/class10-storageYJSON/exerciseLogIn/styles.css
+++ b/class10-storageYJSON/exerciseLogIn/styles.css
@@ -32,3 +32,21 @@
     height: 25%;
 }
 
+
+
+#bodyTwo {
+    background-color: #26798E;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 7%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: aliceblue;
+}
+
+#bodyTwo img {
+    width: 70%;
+    border-radius: 10%;
+}
